# sqlmesh-demo-show

./: .gitignore  Dockerfile  README.md  commands.sh  config.yaml  env.template  pyproject.toml
models/marts/: customers.sql  order_items.sql  orders.sql  products.sql  stores.sql  supplies.sql  tweets.sql
models/seeds/: customers.sql  items.sql  orders.sql  products.sql  seed_model.sql  stores.sql  supplies.sql  tweets.sql
models/stg/: stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_stores.sql  stg_supplies.sql  stg_tweets.sql
